:sparkles: Reset password and verify email added
