# controller/auth.js
@@ -1,9 +1,11 @@
 const Users = require("../models/users");
 const Joi = require("joi");
 const bcrypt = require("bcrypt");
-const { createToken } = require("../utils");
-const _ = require("lodash");
+const { createToken, validateToken } = require("../utils");
 const Author = require("../models/authors");
+const User = require("../models/users");
+const emailService = require("../lib/nodemailer");
+const MyError = require("../utils/error");
 
 exports.signUp = async (req, res) => {
   // #swagger.tags = ['Auth']
@@ -27,23 +29,150 @@ exports.signUp = async (req, res) => {
   } */
 
   let { error } = validateSignUp(req.body);
-  if (error)
-    return res.status(400).json({ success: false, msg: error.message });
-  try {
-    const hash = await bcrypt.hash(req.body.password, 8);
-    let user = await Users.create({ ...req.body, password: hash });
-    if (req.body.role === "author") {
-      await Author.create({ ...user._doc });
-    }
-
-    let token = createToken({ userId: user._id, role: user.role });
-    const { password, ...docs } = user._doc;
-    res.status(201).json({ token, user: docs, success: true });
-  } catch (error) {
-    res.status(400).json({ success: false, msg: error.message });
+  if (error) throw new MyError(error.message, 400)
+  let user = await Users.create({ ...req.body });
+  if (req.body.role === "author") {
+    await Author.create({ ...user._doc });
   }
+
+  let token = createToken({ userId: user._id, role: user.role });
+  const { password, ...docs } = user._doc;
+  res.status(201).json({ token, user: docs, success: true });
 };
 
+exports.forgotPassword = async (req, res) => {
+  // #swagger.tags = ['Auth']
+  /* #swagger.parameters['body'] = {
+        in: 'body',
+        description: 'Forgot Password params',
+        required: true,
+        type: 'obj',
+        schema: { $ref: '#/definitions/LOG_IN' }
+} */
+  /* #swagger.responses[200] = {
+          description: 'Response body',
+          schema: {$ref: '#/definitions/AUTH_RESPONSE'}
+  } */
+  /* #swagger.responses[400] = {
+          description: 'Password or Email is wrong',
+         schema: {
+            success: false,
+            msg: 'Email or password is wrong'
+        }
+  } */
+
+  const { error } = validateEmail({ email: req.body.email });
+  if (error) throw new MyError(error.message, 400);
+  const user = await User.findOne({ email: req.body.email });
+  // Generate a reset token and store it in the database
+  const resetToken = createToken({ _id: user._id, email: user.email, role: user.role }, { expiresIn: "15m" });
+  const fullUrl = req.get("Referer") ? `${new URL(req.url, req.get("Referer"))}` : `${req.protocol}://${req.get('host')}${req.originalUrl}`
+
+  const mail = await emailService.send({
+    to: user.email, //auth/verify/forget-password/:token
+    html: `<a style="padding:7px 15px; display:inline-block; background: blue; text-decoration: none;color:#fff" href='${fullUrl}/?token=${resetToken}'><b>Reset Password</b></a>`,
+  });
+  user.resetToken = resetToken;
+  await user.save();
+  return res.status(201).json({ success: true, msg: `Verification link sended to your email` });
+}
+exports.changePassword  = async (req, res) => {
+  // #swagger.tags = ['Auth']
+  /* #swagger.parameters['body'] = {
+        in: 'body',
+        description: 'Forgot Password params',
+        required: true,
+        type: 'obj',
+        schema: { $ref: '#/definitions/LOG_IN' }
+} */
+  /* #swagger.responses[200] = {
+          description: 'Response body',
+          schema: {$ref: '#/definitions/AUTH_RESPONSE'}
+  } */
+  /* #swagger.responses[400] = {
+          description: 'Password or Email is wrong',
+         schema: {
+            success: false,
+            msg: 'Email or password is wrong'
+        }
+  } */
+
+  const { error } = validateEmail({ email: req.body.email });
+  if (error) throw new MyError(error.message, 400);
+  const user = await User.findOne({ email: req.body.email });
+  // Generate a reset token and store it in the database
+  const resetToken = createToken({ _id: user._id, email: user.email, role: user.role }, { expiresIn: "15m" });
+  const fullUrl = req.get("Referer") ? `${new URL(req.url, req.get("Referer"))}` : `${req.protocol}://${req.get('host')}${req.originalUrl}`
+
+  const mail = await emailService.send({
+    to: user.email, //auth/verify/forget-password/:token
+    html: `<a style="padding:7px 15px; display:inline-block; background: blue; text-decoration: none;color:#fff" href='${fullUrl}/?token=${resetToken}'><b>Reset Password</b></a>`,
+  });
+  user.resetToken = resetToken;
+  await user.save();
+  return res.status(201).json({ success: true, msg: `Verification link sended to your email` });
+}
+
+exports.resetPassword = async (req, res) => {
+  const token = req.params.token
+  const { error } = validatePassword(req.body)
+  if (error) throw new MyError(error.message, 400)
+  const validatedToken = validateToken(token, "Invalid verification link")
+  const user = await User.findOne({ email: validatedToken.email, resetToken: token })
+  if (!user) throw new MyError("Invalid verification link", 400);
+  user.password = req.body.password
+  user.resetToken = undefined;
+  await user.save()
+  return res.status(201).json({ success: true, msg: 'Password resettled successfully' });
+}
+exports.verifyResetPassword = async (req, res) => {
+  const token = req.params.token
+  const validatedToken = validateToken(token, "Invalid verification link")
+  const user = await User.findOne({ email: validatedToken.email, resetToken: token })
+  if (!user) throw new MyError("Invalid verification link", 400);
+  return res.status(200).json({ success: true });
+}
+
+exports.verifyEmail = async (req, res) => {
+
+  const { token } = req.params
+  let validToken = validateToken(token, "Invalid verification link")
+  let user = await User.findById(validToken._id)
+  if (!user) throw new MyError("Invalid verification link", 400)
+  user.verified = true;
+  await user.save();
+
+  return res.status(201).json({ success: true, msg: 'Email has verified' });
+
+}
+
+exports.generateEmailVerificationToken = async (req, res) => {
+
+  const { error } = validateEmail(req.body);
+  if (error) throw new MyError(error.message, 400);
+
+  const user = await User.findOne({ email: req.body.email });
+
+  if (!user) {
+    return res.status(201).json({ success: true, msg: 'Email not found. Please register to continue.' });
+  }
+
+  if (user && !user.verified) {
+    let token = createToken({ _id: user._id, email: user.email, role: user.role }, { expiresIn: "15m" });
+
+    const fullUrl = req.get("Referer") ? `${new URL(req.url, req.get("Referer"))}` : `${req.protocol}://${req.get('host')}${req.originalUrl}`
+    console.log(token, "token");
+    const mail = await emailService.send({
+      to: user.email,
+      html: `<a href='${fullUrl}/?token=${token}'><b>Bos Jails</b></a>`,
+    })
+    console.log(fullUrl, `/?token=${token}`);
+    return res.status(201).json({ success: true, msg: `Verification link sended to your email` });
+  }
+
+  return res.status(400).json({ success: true, msg: 'Email already verified' });
+
+}
 exports.login = async (req, res) => {
   // #swagger.tags = ['Auth']
   /* #swagger.parameters['body'] = {
@@ -67,29 +196,35 @@ exports.login = async (req, res) => {
 
   let { email, password } = req.body;
   let { error } = validateLogin(req.body);
-  if (error)
-    return res.status(400).json({ success: false, msg: error.message });
-  try {
-    let user = await Users.findOne({ email });
-    if (!user) {
-      return res
-        .status(400)
-        .json({ success: false, msg: "Email or password is incorrect" });
-    }
-    const isPasswordCorrect = await bcrypt.compare(password, user.password);
-    if (isPasswordCorrect) {
-      let token = createToken({ userId: user._id, role: user.role });
-      let { password, ...docs } = user._doc;
-      return res.status(200).json({ token, user: docs, success: true });
-    }
-    res
-      .status(400)
-      .json({ success: false, msg: "Email or password is incorrect" });
-  } catch (err) {
-    res.status(400).json({ success: false, msg: err.message });
+  if (error) throw new MyError(error.message, 400)
+
+  // try {
+  let user = await Users.findOne({ email }, { password: { select: false } });
+  if (!user) throw new MyError("Email or password is incorrect", 400)
+
+  const isPasswordCorrect = await user.comparePassword(password);
+  if (isPasswordCorrect) {
+    let token = createToken({ _id: user._id, role: user.role });
+    let { password, ...docs } = user._doc;
+    return res.status(200).json({ token, user: docs, success: true });
   }
+  throw new MyError("Email or password is incorrect", 400)
 };
 
+function validateEmail(formData) {
+  const schema = Joi.object({
+    email: Joi.string().required().email(),
+  });
+
+  return schema.validate(formData, { abortEarly: false });
+}
+function validatePassword(formData) {
+  const orderSchema = Joi.object({
+    password: Joi.string().required(),
+  });
+
+  return orderSchema.validate(formData, { abortEarly: false });
+}
 function validateLogin(formData) {
   const orderSchema = Joi.object({
     email: Joi.string().required().email(),
